tests/_resources/error_gcns/E008_empty_function_args.gcn
# Error: Empty function arguments
block PRODUCTION
{
    identities
    {
        Y[] = exp() + K[];
    };
};
